# crypt-tool

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
src/: main.rs  xortool.rs
