[package]
name = "gsm_tool"
version = "0.1.0"
authors =  ["Decepticond S, decepticond on Discord"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
crypto = "0.5.1"

[[bin]]
name = "gsm-tool"
path = "src/main.rs"
